# AdventOfCode2021

./: README.md
day01/hs/: package.yaml
day01/hs/src/: Lib.hs
day01/rs/: Cargo.toml
day01/rs/benches/: bench.rs
day01/rs/src/: lib.rs
day02/hs/: hs.cabal  package.yaml
day02/hs/src/: Lib.hs
day02/rs/benches/: bench.rs
day02/rs/src/: lib.rs
day03/hs/src/: Lib.hs
day03/hs/test/: Spec.hs
day03/rs/: Cargo.toml
day03/rs/src/: lib.rs
day04/hs/src/: Lib.hs
day04/hs/test/: Spec.hs
day04/rs/src/: lib.rs
day05/hs/src/: Lib.hs
day05/hs/test/: Spec.hs
day05/rs/src/: lib.rs
day06/hs/src/: Lib.hs
day06/hs/test/: Spec.hs
day06/rs/src/: lib.rs
day07/hs/src/: Lib.hs
day07/hs/test/: Spec.hs
day07/rs/src/: lib.rs
day08/hs/src/: Lib.hs
day08/hs/test/: Spec.hs
day08/rs/src/: lib.rs
day09/rs/src/: lib.rs
day10/hs/src/: Lib.hs
day10/hs/test/: Spec.hs
day10/rs/src/: lib.rs
day11/rs/: Cargo.toml
day11/rs/src/: lib.rs
day12/rs/src/: lib.rs
day13/hs/src/: Lib.hs
day13/hs/test/: Spec.hs
day13/rs/src/: lib.rs  main.rs
day14/hs/: hs.cabal
day14/hs/src/: Lib.hs
day14/hs/test/: Spec.hs
day14/rs/src/: lib.rs
day15/rs/src/: lib.rs
day16/rs/src/: lib.rs
day17/hs/src/: Lib.hs
day17/hs/test/: Spec.hs
day17/rs/: Cargo.toml
day17/rs/src/: lib.rs
day18/rs/src/: lib.rs
day19/rs/src/: lib.rs
day20/rs/src/: lib.rs
day21/rs/: Cargo.toml
day21/rs/src/: lib.rs
day22/rs/: Cargo.toml
day22/rs/src/: lib.rs
day23/rs/src/: lib.rs
day24/rs/: Cargo.toml
day24/rs/alu/: Cargo.toml
day24/rs/src/: lib.rs
(+2 files in other folders)
